--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap: 16px;
+  padding: 16px;
 }
 
 .icon {
@@ -33,6 +36,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -48,6 +52,8 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  align-self: center;
+  margin-left: 55px;
 }
 
 button {
@@ -66,4 +72,19 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.main_title {
+  display: flex;
+  justify-content:space-between;
+}
+
+.header {
+  font-weight: bold;
+  font-size: 1.3em;
+  padding: 10px;
+  padding-left: 0;
+}
+.text {
+  margin-bottom: 16px;
 }
